--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "request": "~2.12.0",
     "mongojs": "~0.6.2",
     "olinapps": "~0.0.3",
-    "connect-mongo": "~0.3.2"
+    "connect-mongo": "~0.3.2",
+    "async": "~0.2.8",
+    "rem": "~0.6.6-1"
   }
 }
