--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "olinapps": "~0.0.3",
     "connect-mongo": "~0.3.2",
     "async": "~0.2.8",
-    "rem": "~0.6.6-1"
+    "rem": "~0.6.6-1",
+    "resanitize": "~0.1.10"
   }
 }
